# Python

hw_1/: nl.py  pyproject.toml  tail.py  wc.py
hw_1/artifacts/: nl.txt  tail.txt  wc.txt
hw_2/: Dockerfile  generator.py  image_check.py  pyproject.toml  table_check.py
hw_2/artefacts/: table.tex
hw_2/artefacts/image/: ref.txt
hw_2/artefacts/image/others/: table_image.aux  table_image.tex
hw_3/: hash.py  matrix.py  mixin.py
hw_3/artefacts/3.1/: matrix+.txt  matrix@.txt  matrix∗.txt
hw_3/artefacts/3.2/: matrix+.txt  matrix-.txt  matrix1.txt  matrix2.txt  matrix@.txt  matrixT.txt  matrix∕.txt  matrix∗.txt
hw_3/artefacts/3.3/: A.txt  AB.txt  C.txt  CD.txt  D.txt  hash.txt
hw_4/: fib.py  integrate.py  pyproject.toml
hw_4/artefacts/: fib.txt  integrate.txt
