[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Smart781",email = "Artems2311@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydeeplib (>=0.0.1,<0.0.2)",
    "speedfile (>=0.0.1,<0.0.2)",
    "setuptools (>=77.0.3,<78.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "twine (>=6.1.0,<7.0.0)",
    "latex-generator-for-tables-and-images (>=0.0.1,<0.0.2)"
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
